# L6_Matrix

./: .gitignore  CMakeLists.txt  Doxyfile  build.sh
.github/workflows/: cmake.yml
src/: main.cpp  matrix.h  version.h.in
